--- a/src/main.scss
+++ b/src/main.scss
@@ -7,13 +7,17 @@ body {
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-overflow-scrolling: touch;
   -webkit-text-size-adjust: none;
 }
 
 html,
 body,
 #container {
-  height: 100vh;
-  overflow: hidden;
+  min-height: 100vh;
   width: 100vw;
+}
+
+body.modal {
+  overflow: hidden;
 }
